# HermosaPDF

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE.md  NOTICE.md  PLAN.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
scripts/: generate-test-agreement.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  lib.rs  main.rs  pdfops.rs
src/components/: AiPanel.tsx  AnnotationLayer.tsx  AnnotationTools.tsx  ApiKeyModal.tsx  ContextMenu.tsx  MenuBar.tsx  OcrProgressModal.tsx  SignatureModal.tsx  StatusBar.tsx  Thumbnails.tsx  TitleBar.tsx  Toolbar.tsx  Viewer.tsx
src/lib/: ai.ts  annotations.ts  convert.ts  devtools.ts  keyboard.ts  ocr.ts  pdf.ts  store.ts
