[package]
name = "hermosa_pdf"
version = "0.1.0"
description = "HermosaPDF — personal PDF editing suite"
authors = ["wbp318"]
edition = "2021"

[lib]
name = "hermosa_pdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.34"

